@@ -2,7 +2,15 @@ Revision history for Perl extension Apache::Request.
 
 =over 4
 
-=item 0.20_02-dev
+=item 0.30_02 - April 30, 1999
+
+always parse the query string (if present), including POST requests
+
+fixed another bug related to path_info
+
+fixed Apache::Cookie->path bug spotted by Jeffrey W. Baker
+ 
+=item 0.30_01 - January, 27 - 1999
 
 added ApacheRequest_script_name (r->uri minus r->path_info)
 
